--- a/login.css
+++ b/login.css
@@ -128,6 +128,7 @@ body{
     font-size: 22px;
 }
 .bar-box .right .loginForm .btn{
+    display:block;
     height: 40px;
     margin-top: 20px;
     font-weight: bold;
