--- a/PassMeIN/src/app/components/hero/hero.component.html
+++ b/PassMeIN/src/app/components/hero/hero.component.html
@@ -174,13 +174,13 @@
       <div class="contactUslist">
         <ul>
           <li>
-            <a href="https://www.facebook.com/Passmein-286405745604444/?modal=admin_todo_tour"><i class="fa fa-facebook-square" aria-hidden="true"></i>Facebook</a>
+            <a href="https://www.facebook.com/Passmein-286405745604444/?modal=admin_todo_tour"><i class="fab fa-facebook-square" aria-hidden="true"></i>Facebook</a>
           </li>
           <li>
-            <a href="https://twitter.com/Souvick13448718"><i class="fa fa-twitter-square" aria-hidden="true"></i>twitter</a>
+            <a href="https://twitter.com/Souvick13448718"><i class="fab fa-twitter-square" aria-hidden="true"></i>twitter</a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/company/setup/new/"><i class="fa fa-linkedin-square" aria-hidden="true"></i>linkedin</a>
+            <a href="https://www.linkedin.com/company/setup/new/"><i class="fab fa-linkedin" aria-hidden="true"></i>linkedin</a>
           </li>
           <li>
             <a href="#"><i class="fa fa-phone-square" aria-hidden="true"></i>+91-9414131414</a>
@@ -203,7 +203,7 @@
       <div class="contactUslist">
         <ul>
           <li>
-            <a href=""><i class="fa fa-chrome" aria-hidden="true"></i>Chrome Extension</a>
+            <a href=""><i class="fab fa-chrome" aria-hidden="true"></i>Chrome Extension</a>
           </li>
 
         </ul>
